# Coworker_v3

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/coworker/: config.py  logging.py  loguru_patcher.py
backend/coworker/api/: deps.py  main.py
backend/coworker/approval/: items.py
backend/coworker/chat/: orchestrator.py
backend/coworker/cli/: main.py  specialist.py
backend/coworker/connectors/: anthropic_client.py  fusesign_client.py  rate_limit_redis.py  shadow_mode.py  xpm_client.py
backend/scripts/: deploy.sh
client/public/: sitemap-blog.xml  sitemap.xml
docs/: ENVIRONMENT_AND_DEPLOY.md  FRONTEND_CONTRACT.md  build-plan.md
docs/audits/: 2026-05-01-pre-phase-3-audit.md
docs/known-issues/: 2026-05-18-09fad28-half-deployed-undetected.md  2026-05-18-architecture-doc-stale-placeholder-domain.md  2026-05-18-deploy-sh-untestable-no-test-seam.md  2026-05-18-env-file-validated-against-wrong-contract.md  2026-05-18-master-encryption-key-duplicate.md  2026-05-18-scheduler-subscribe-zero-installations.md
docs/methodology/: individual_tax_return.md  individual_tax_return_drafting.md
docs/runbooks/: firm-bootstrap.md
frontend/: .gitignore  FRONTEND_SPEC.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  index.css  main.tsx  styles.css
infra/caddy/: Caddyfile
infra/systemd/: coworker-backfill.service  coworker-backfill.timer
scripts/: probe_individual_return_prep.py
(+139 files in other folders)
